fixed iphone-se spacing for home, and added ip amd PORT 5000

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -233,4 +233,8 @@ body {
     .brand-name {
         font-size: 25px;
     }
+     .video-content {
+    padding-left: 5%;
+    margin-top: 25%;
+    }
 }
